[project]
name = "simple-langgraph-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "graphviz>=0.20.3",
    "ipython>=9.0.2",
    "langgraph>=0.3.25",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "pydantic>=2.11.2",
    "uvicorn>=0.34.0",
]
